# statsd-rs

./: Cargo.toml  README.md
etc/: statsd.json
src/: lib.rs  ring.rs
src/backend/: banshee.rs  graphite.rs  mod.rs
src/mock/: mock.py  mocktcp.rs
src/worker/: mod.rs
