[package]
name = "statsd"
version = "0.1.0"
authors = ["wayslog <wayslog@163.com>"]

[lib]
name="libstatsd"
path="src/lib.rs"

[[bin]]
name="statsd"
path="src/bin/statsd.rs"

[dependencies]
net2 = "0.2.29"
num_cpus = "1.6.0"
futures = "0.1"
tokio-core = "0.1"
log = "0.3.8"
env_logger = "0.4.3"
lazy_static = "0.2.8"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
fnv = "1.0"